fixed sales module button